IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
8/15/14: In eTomo - PEET, added a radio button for setting yaxisType to 3.
(Bug# 1787)

8/15/14: IMOD_4-7-8
8/15/14: Fixed bug that caused crash in Nda (In 4.7).

8/7/14: Changes for 3dmod image processing: Kept track of sequence of
operations so that they can be reapplied easily; added buttons to remove last
one from list, redo all operations, and list the command-line operations in the
Info windows; added option to save modified data to memory automatically; made
thresholding able to update continuously; added File-Process File menu item to
apply operations to image file or subset inside rubber band.

8/7/14: Added option to change output mode from Mtffilter, and a warning when
output is out of range for the existing mode.

8/5/14: Allowed File-Extract in 3dmod to be run on non-MRC files (In 4.7).

8/3/14: IMOD_4-8-10
8/3/14: Subdivided steps in Batchruntomo so CTF plotting and 3D gold
finding could be checked at one stopping point; eliminated option to switch
order of steps; CHANGED NUMBERS FOR -start AND -end AGAIN.

7/31/14: Fixed clip corr giving non-zero exit status on Windows.

7/30/14: IMOD_4-7-7
7/30/14: SWITCHED WRITING OF BYTE FILES BACK TO UNSIGNED (In 4.7).

7/24/14: Fixed transferfid for bidirectional series and other cases with
a separate view group option in tracka.com (In 4.7).

7/21/14: Modified uitest to work with the new way IMOD is solving for angles.
(Bug# 1805)

7/21/14: In eTomo - Fine Alignment, changed the title of the MaximumCycles
parameter to "Iteration limit" (In 4.7).(Bug# 1807)

7/21/14: In eTomo fixed a bug that made ineditable table fields editable.
This bug can lead to problems with dataset stablility if these fields are
modified (In 4.7).(Bug# 1812)

7/14/14: IMOD_4-8-9
7/16/14: Changes for Batchruntomo: make it rerun align without local
alignments if it fails with it; add ability to detect blank views at ends of