@@ -45,6 +45,13 @@ volume will not fit in memory, use "clip fft -3d" to get an FFT, run Mtffilter
 on the 3D FFT, then inverse transform with "clip fft -3d -m mode", where
 mode is the desired output mode, typically the same as the input.
 
+[Field = OneDimensionalFilter]
+short = 1dfilter
+type = B
+usage = Filter data in 1D (in X direction) instead of in 2D
+tooltip = 
+manpage = 
+
 [Field = LowPassRadiusSigma]
 short = lowpass
 type = FP
@@ -129,6 +136,21 @@ type = F
 usage = Density scaling factor (default 1.0)
 tooltip =
 manpage = Scaling factor for image intensities after filtering.
+
+[Field = RWeightedFilter]
+short = rweight
+type = B
+usage = Apply an R-weighted filter in the X-dimension, as in back-projection
+tooltip = 
+manpage = Apply an R-weighted filter in the X-dimension, as in
+back-projection.  This option implies \fB-1dfilter\fR.  It cannot be used
+along with an inverse MTF filter.  The filter will be scaled to be 1.0 at the
+cutoff radius specified with the \fB-lowpass\fR option, if any, or at a
+frequency of 0.5.  This will likely result in a smaller range for
+the output values, which could lose intensity resolution by making integer
+values occupy too few gray levels.  To overcome this problem, use the
+\fB-denscale\fR option to scale the data up, or change the output mode to
+floating point with "-mode 2".
 
 [Field = AmplifierFactorAndPower]
 short = amplifier
